# insightlibrary-ai

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  MONOREPO-CICD-PLAN.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: ci.yml  deploy.yml
apps/app/: .env.example  Dockerfile  package.json  svelte.config.js  vite.config.ts
apps/app/src/: app.css  app.html
apps/app/src/lib/: api.ts  auth-client.ts  auth-keys.ts  icons.ts  query.ts  utils.ts
apps/app/src/lib/components/shell/: Copilot.svelte  Sidebar.svelte  Topbar.svelte
apps/app/src/lib/components/ui/: Badge.svelte  BarChart.svelte  Button.svelte  Card.svelte  DonutChart.svelte  Input.svelte  PageHeader.svelte  Progress.svelte  Skeleton.svelte  StatCard.svelte  index.ts
apps/app/src/lib/platform/: index.ts  oauth.ts  tauri.ts  types.ts  web.ts
apps/app/src/routes/: +layout.svelte  +layout.ts
apps/app/src/routes/(app)/: +layout.svelte  +layout.ts  +page.svelte
apps/app/src/routes/(app)/admin/: +page.svelte
apps/app/src/routes/(app)/folders/: +page.svelte
apps/app/src/routes/(app)/graph/: +page.svelte
apps/app/src/routes/(app)/notifications/: +page.svelte
apps/app/src/routes/(app)/reader/: +page.svelte
apps/app/src/routes/(app)/research/: +page.svelte
apps/app/src/routes/(app)/review/: +page.svelte
apps/app/src/routes/(app)/search/: +page.svelte
apps/app/src/routes/(app)/settings/: +page.svelte
apps/app/src/routes/(app)/study/: +page.svelte
apps/app/src/routes/(app)/topics/: +page.svelte
apps/app/src/routes/login/: +page.svelte
apps/desktop/: MOBILE.md  package.json
apps/desktop/src-tauri/: Cargo.toml  UPDATER.md  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  desktop.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  oauth.rs  secrets.rs
apps/server/: .env.example  AUTH.md  drizzle.config.ts  package.json  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
apps/server/db-init/: 01-extensions.sql
apps/server/migrations/: 0001_refinery_phase0.sql  0002_refinery_phase1.sql  0003_refinery_phase2.sql  0004_refinery_phase7.sql  0005_refinery_billing_fts.sql  0006_hosted_tier.sql  0007_org_settings.sql  0008_document_status_backfill.sql  0009_mcq_attempts.sql  0010_usage_metering.sql  0011_webhooks_notifications.sql  0012_research.sql  0013_ontology_schema.sql  0014_golden_set.sql
apps/server/resources/ontologies/: seed.json
apps/server/scripts/ontology/: build-mesh.ts  build-obo.ts  build-rrf.ts
apps/server/src/: app.d.ts  hooks.server.ts
apps/server/src/lib/server/: audit.ts  auth-config.ts  auth-guard.ts  auth.ts  org-settings.ts  schemas.test.ts
apps/server/src/lib/server/ai/: credentials.ts  embeddings.test.ts  embeddings.ts  expansion.ts  gemini.ts  rerank.ts
apps/server/src/lib/server/billing/: stripe.ts
apps/server/src/lib/server/data/: coverage.test.ts  coverage.ts  index.ts  postgres.ts  repository.test.ts  repository.ts  seed.ts
apps/server/src/lib/server/db/: client.ts  migrate.ts  schema.ts  seed-runner.ts
apps/server/src/lib/server/eval/: golden-store.ts  golden.ts  runner.ts
apps/server/src/lib/server/graph/: community.ts
apps/server/src/lib/server/jobs/: worker.ts  (+3 more)
backend/: .dockerignore  .env.example  .gitattributes  .gitignore  Cargo.toml  README.md
backend/crates/insight-api/: Cargo.toml
backend/crates/insight-api/src/: auth.rs  error.rs  main.rs  middleware.rs  sse.rs  state.rs  ws.rs
backend/crates/insight-api/src/routes/: admin.rs  admin_orgs.rs  admin_settings.rs  ai.rs  ai_oauth.rs  api_keys.rs  audit.rs  auth.rs  billing.rs  copilot.rs  documents.rs  evaluation.rs  figures.rs  folders.rs  graph.rs  health.rs  jobs.rs  mod.rs  notifications.rs  ontology.rs  org_settings.rs  preferences.rs  processing.rs  research.rs  review.rs  search.rs  sources.rs  study.rs  topics.rs  usage.rs  users.rs  webhooks.rs
backend/crates/insight-core/: Cargo.toml
backend/crates/insight-core/migrations/: 0001_extensions_and_tenancy.sql  0002_documents.sql  0003_knowledge.sql  0004_study.sql  0005_collab_ops.sql  0006_vectors.sql  0007_rls.sql  0008_rls_nullif.sql  0009_auth_lookup.sql  0010_document_folder.sql  0011_chunks_unembedded.sql  0012_chunks_fts.sql  0013_claims_grounding.sql  0014_auth_sessions.sql  0015_settings.sql  0016_provider_keys_usage.sql  0017_library.sql  0018_research_ontology.sql  0019_ops.sql  0020_plans_quotas.sql  0021_api_key_auth.sql
backend/crates/insight-core/src/: analytics.rs  billing.rs  claims.rs  collab.rs  correlate.rs  eval.rs  export.rs  graph.rs  ingest.rs  lib.rs  llm.rs  notify.rs  ontology.rs  retrieve.rs  security.rs  settings.rs  study.rs  synth.rs  tenancy.rs  tutor.rs  webhooks.rs
backend/crates/insight-core/src/storage/: blob_store.rs  cache.rs  doc_store.rs  graph_store.rs  mod.rs  queue.rs  selftest.rs  vector_store.rs
backend/crates/insight-worker/: Cargo.toml
backend/crates/insight-worker/src/: main.rs
backend/crates/insight-worker/tests/fixtures/: mondo-min.json
backend/deploy/: Caddyfile  Dockerfile.rust  docker-compose.yml
backend/deploy/cloudflared/: config.yml.example
backend/deploy/postgres-init/: 01-app-role.sh
backend/deploy/scripts/: backup-insight.sh  compose.sh  deploy.ps1  post-receive  pull-and-up.sh  smoke_minio.sh
backend/docs/: frontend-api-surface.md  ingestion-pipeline-reference.md
backend/services/inference-svc/: Dockerfile  requirements.txt
backend/services/inference-svc/app/: main.py
backend/services/parser-svc/: Dockerfile  requirements.txt
backend/services/parser-svc/app/: main.py
(+160 files in other folders)
