[package]
name = "insight-worker"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
insight-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

# insight-apitest / insight-ingest-test acceptance binaries
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
# insight-ingest-test queries the DB + MinIO directly to assert persistence.
sqlx = { workspace = true }
